Переделываю работу с продукт